# chela

./: .eslintrc.cjs  .prettierrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/: App.tsx  PreviewImage.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AppConfig.ts  CullState.ts  CulledImages.ts  GroupedImages.ts  Image.ts  ImageDir.ts
src-tauri/src/: img.rs  main.rs
src-tauri/src/app/: commands.rs  mod.rs  state.rs
src-tauri/src/image/: cull_meta.rs  image.rs  mod.rs  preview.rs  raw.rs
src-tauri/src/preview_api/: error.rs  health.rs  mod.rs  preview.rs  state.rs
src/components/: BoundaryIcon.tsx  CullScreen.tsx  FinishCullDialog.tsx  PreviewImage.tsx  ProgressBar.tsx
src/hooks/: toast.ts
src/store/: configStore.ts  navStore.ts
src/utils/: array.ts  function.ts  loading.ts  math.ts
