[package]
name = "chela"
version = "0.0.1"
description = "Cut it all"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "window-close",
    "window-minimize",
    "window-maximize",
    "shell-open",
    "dialog",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
glob = "0.3"
anyhow = "1.0"
rayon = "1.8"
lazy_static = "1.4.0"
url = "2.4"
tokio = { version = "1.34", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
num_cpus = "1.16"
axum = { version = "0.6", features = ["http2", "macros", "headers"] }
hyper = "0.14"
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "7.0.0", features = ["chrono-impl", "format"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
