[package]
name = "chela"
version = "0.0.1"
description = "Cut it all"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "window-close",
    "window-minimize",
    "window-maximize",
    "shell-open",
    "dialog",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
anyhow = "1.0"
rayon = "1.8"
tokio = { version = "1.34", features = ["sync", "macros"] }
num_cpus = "1.16"
axum = { version = "0.7", features = ["http2", "macros"] }
hyper = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "7.0", features = ["chrono-impl", "format"] }
tokio-stream = "0.1"
trash = "3.1"
axum-extra = { version = "0.9", features = ["async-read-body"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
